...
  const handleSearch = () => {
    console.log("Search button pressed!");
  };

  return (
    <View
      testID="screen-playground"
      style={{
        flex: 1,
        backgroundColor: theme.mode === "dark" ? "#000" : "#FFFFFF",
      }}
    >
      <Host style={{ flex: 1 }} colorScheme={theme.mode}>
...
